# asset-optimizer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  asset-optimizer.yaml.example  pyproject.toml
.claude/commands/: create-asset-type.md  create-evaluation.md  dev-report.md  run-experiment.md
.claude/rules/: development.md  usage.md
.claude/skills/: create-evaluation.md  create-improvement-prompt.md  dev-report.md  register-asset-type.md  score-and-review.md
deploy/: Dockerfile
deploy/helm/asset-optimizer/: Chart.yaml  values.yaml
deploy/openshift/: deployment.yaml
dev-reports/: TEMPLATE.md
docs/: api-reference.md  architecture.md  asset-types.md  deployment.md  development.md  evaluations.md  extending.md  getting-started.md  library-usage.md  product_roadmap.md  providers.md
docs/superpowers/plans/: 2026-03-29-asset-optimizer.md  2026-03-29-visual-image-optimization.md
evaluations/: image-visual.yaml  luminth-hero-strict.yaml  prompt-clarity.yaml
examples/img-prompt-enhancement/: README.md  context.md  evaluation.yaml  luminth-context.md  run_gemini_images.py  run_luminth_strict.py  run_optimization.py  run_with_images.py  starting-prompt.txt
src/asset_optimizer/: __init__.py  config.py
src/asset_optimizer/api/: app.py  (+3 more)
tests/: conftest.py
tests/unit/: test_api.py  test_assets.py  test_cli.py  test_config.py  test_convergence.py  test_engine.py  test_evaluation.py  test_factory.py  test_image_storage.py  test_models.py  test_providers.py  test_repository.py  test_scoring.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
(+61 files in other folders)
